<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InvisalignTracker</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_setting">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="small_empty_time">00:00/00:00</string>

    <!-- Setting -->
    <!-- Alarm -->
    <string name="setting_alarm_title">Alarm</string>
    <string name="setting_alarm_initial_title">Initial</string>
    <string name="setting_alarm_initial_description">Alarm every 5 mins since start unless during meal time</string>
    <string name="setting_alarm_final_title">Final</string>
    <string name="setting_alarm_initial_message">Alarm </string>
    <string name="setting_alarm_final_description">Alarm every 1 mins only if total time is over Time Cap and time continues</string>
    <string name="setting_alarm_time_cap_title">Time Cap</string>
    <string name="setting_alarm_time_cap_description">Warn you via notification if time spent over </string>

    <!-- Notification -->
    <string name="setting_notification_title">Notification</string>
    <string name="setting_notification_alwayson_title">Enable</string>
    <string name="setting_notification_alwayson_description">Show time clock on notification</string>
    <string name="noti_message_init_title">Require Attention</string>
    <string name="noti_message_init_text">Time is over 5 mins since start</string>
    <string name="noti_message_final_title">Require Attention</string>
    <string name="noti_message_final_text">Exceed time limit!!</string>

</resources>